# kaitai_struct_tests

./: run-objc
builder/: objc_builder.rb
formats/: str_literals2.ksy
spec/ks/: str_literals2.kst
spec/objc/: CMakeLists.txt  test_bcd_user_type_be.m  test_bcd_user_type_le.m  test_bits_byte_aligned.m  test_bits_simple.m  test_buffered_struct.m  test_bytes_pad_term.m  test_cast_nested.m  test_cast_to_imported.m  test_cast_to_top.m  test_default_big_endian.m  test_default_endian_expr_inherited.m  test_default_endian_expr_is_be.m  test_default_endian_expr_is_le.m  test_default_endian_mod.m  test_docstrings.m  test_docstrings_docref.m  test_docstrings_docref_multi.m  test_enum_0.m  test_enum_1.m  test_enum_deep.m  test_enum_deep_literals.m  test_enum_if.m  test_enum_negative.m  test_enum_of_value_inst.m  test_enum_to_i.m  test_expr_0.m  test_expr_1.m  test_expr_2.m  test_expr_3.m  test_expr_array.m  test_expr_bytes_cmp.m  test_expr_enum.m  test_expr_io_pos.m  test_expr_mod.m  test_expr_sizeof_type_0.m  test_expr_sizeof_type_1.m  test_expr_sizeof_value_0.m  test_expr_sizeof_value_sized.m  test_fixed_contents.m  (+80 more)
spec/objc/prereq/: custom_fx.h  custom_fx.m  my_custom_fx.h  my_custom_fx.m  runtests.m
translator/src/main/scala/io/kaitai/struct/testtranslator/: Main.scala  TestTranslator.scala
translator/src/main/scala/io/kaitai/struct/testtranslator/specgenerators/: ObjcSG.scala
